src/test/deca/syntax/invalid/SansObjet/StringNonFerme.deca
//Description
//  test de string non ferme
//
//Réponse
//  Erreur syntaxique ligne 9
// token recognition error at: '"gl)\n}'

{
    println("gl)
}